--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "smart-mirror",
-  "short_name": "smart-mirror",
+  "name": "smart_mirror",
+  "short_name": "smart_mirror",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#0175C2",
