--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "smart-mirror" "\0"
+            VALUE "FileDescription", "smart_mirror" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "smart-mirror" "\0"
+            VALUE "InternalName", "smart_mirror" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "smart-mirror.exe" "\0"
-            VALUE "ProductName", "smart-mirror" "\0"
+            VALUE "OriginalFilename", "smart_mirror.exe" "\0"
+            VALUE "ProductName", "smart_mirror" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
