--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   pattern_formatter: ^4.0.0
   permission_handler: ^11.3.1
   provider: ^6.1.1
+  share_plus: ^10.0.2
   shared_preferences: ^2.0.5
   shimmer: ^3.0.0
   sizer: ^2.0.15
