--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "dart.flutterSdkPath": "D:\\flutter_windows_3.22.2-stable\\flutter",
+    "dart.flutterSdkPath": "C:\\src\\flutter_windows_3.22.2-stable\\flutter",
     "java.configuration.updateBuildConfiguration": "interactive"
 }
